# chip8-emulator

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  chatgpt-log.md
src/: debug.rs  emulator.rs  error.rs  font.rs  interpreter.rs  lib.rs  main.rs  memory.rs  peripherals.rs  rng.rs  rom.rs  test_utils.rs
