[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"
authors = ["Tyson Liddell <tysonliddell@hotmail.com>"]
description = "A CHIP-8 emulator"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
fastrand = "1.9.0"
minifb = "0.24.0"

[dev-dependencies]
mockall = "0.11.4"
