[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"
authors = ["Tyson Liddell <tysonliddell@hotmail.com>"]
description = "A CHIP-8 emulator"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
env_logger = "0.10.0"
fastrand = "1.9.0"
pixels = "0.12.0"
rodio = "0.17.1"
winit = "0.28.3"

[dev-dependencies]
mock_instant = "0.2.1"
mockall = "0.11.4"
